Removed negative element height

--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
 .move-img {
 	display: flex;
 	justify-content: space-between;
-	margin-top: -25vh;
+	/* margin-top: -25vh; */
 }
 .human-img {
 	width: 50%;
@@ -41,7 +41,7 @@ body {
 .moves {
 	display: flex;
 	flex-direction: column;
-	margin-top: -25vh;
+	/* margin-top: -25vh; */
 }
 .choose-option {
 	font-weight: bold;
